# ansible_conf

./: Makefile  inventory.yaml  pyproject.toml
confs/: bashrc  xinitrc
playbooks/: conf_repos.yaml
scripts/: conf_repos.sh
